--- a/Projeto_RA1/MainWindow.xaml
+++ b/Projeto_RA1/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Projeto_RA1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="450">
     <Grid>
-
+        <Label Content="VINICIUS VIADO" FontSize="50" VerticalAlignment="Center" HorizontalAlignment="Center"/>
     </Grid>
 </Window>
