--- a/Projeto_RA1/frontend/MainWindow.xaml
+++ b/Projeto_RA1/frontend/MainWindow.xaml
@@ -5,10 +5,56 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Projeto_RA1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="450">
+        Title="MainWindow" Height="350" Width="400">
     <Grid>
-        <Label Content="VINICIUS VIADO" FontSize="50" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <CheckBox Content="SIM" HorizontalAlignment="Center" Margin="0,380,0,0" IsChecked="True" IsEnabled="False"/>
-        <CheckBox Content="NAO" HorizontalAlignment="Center" Margin="6,400,0,0" IsEnabled="False"/>
+
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Row="0" Grid.Column="0">
+            <GroupBox Header="Seleção de IPC" Margin="3,0,3,0">
+                <StackPanel Orientation="Vertical">
+                    <ComboBox Height="25" Width="120" VerticalAlignment="Top" Margin="0,5">
+                        <ComboBoxItem Content="Pipes"/>
+                        <ComboBoxItem Content="Sockets"/>
+                        <ComboBoxItem Content="Memória"/>
+                    </ComboBox>
+                    <Button Content="Start" Margin="5,10,5,0"/>
+                    <Button Content="Stop" Margin="5,10,5,0"/>
+                    <StackPanel Orientation="Horizontal" Margin="5,10,5,0">
+                        <Label Content="Status do Processo:"/>
+                        <Ellipse Height="15" Width="15" Fill="Red"/>
+                    </StackPanel>
+                </StackPanel>
+            </GroupBox>
+        </Grid>
+        <Grid Grid.Row="0" Grid.Column="1">
+            <GroupBox Header="Envio de mensagens" Margin="3,0,3,0">
+                <StackPanel Orientation="Vertical">
+                    <Label Content="Digite sua mensagem:" HorizontalAlignment="Center"/>
+                    <TextBox Height="50" Margin="5"/>
+                    <Button Content="Enviar" Margin="5,10,5,0"/>
+                </StackPanel>
+            </GroupBox>
+        </Grid>
+        <Grid Grid.Row="1" Grid.Column="0">
+            <GroupBox Header="Log de comunicação" Margin="3,0,3,0">
+                <StackPanel Orientation="Vertical">
+                    <ListBox Height="70" Margin="5"/>
+                    <Button Content="Limpar Log" Margin="5,10,5,0"/>
+                </StackPanel>
+            </GroupBox>
+        </Grid>
+        <Grid Grid.Row="1" Grid.Column="1">
+            <GroupBox Header="Representação visual" Margin="3,0,3,0">
+                <Canvas Name="VisualArea" Background="White" Margin="5"/>
+            </GroupBox>
+        </Grid>
     </Grid>
 </Window>
