--- a/Projeto_RA1/MainWindow.xaml
+++ b/Projeto_RA1/MainWindow.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="IPC Demo" Height="420" Width="640" MinHeight="400" MinWidth="560">
+        Title="IPC Demo" Height="600" Width="1200" MinHeight="400" MinWidth="560"
+        Loaded="Window_Loaded">
     <Grid Margin="8">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -12,7 +13,7 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
 
         <GroupBox Grid.Row="0" Grid.Column="0" Header="Seleção de IPC" Margin="0,0,8,8">
@@ -22,9 +23,9 @@
                     <ComboBoxItem Content="Sockets"/>
                     <ComboBoxItem Content="Memória"/>
                 </ComboBox>
-                <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                    <Button x:Name="BtnStart" Content="Start" Width="80" Margin="0,0,55,0" Click="BtnStart_Click"/>
-                    <Button x:Name="BtnStop"  Content="Stop"  Width="80" Click="BtnStop_Click"/>
+                <StackPanel Orientation="Horizontal" Margin="50,10,0,0">
+                    <Button x:Name="BtnStart" Content="Start" Width="80" Margin="0,0,100,0" Click="BtnStart_Click"/>
+                    <Button x:Name="BtnStop"  Content="Stop"  Width="80" Click="BtnStop_Click" IsEnabled="False"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                     <Label Content="Status:" VerticalAlignment="Center"/>
@@ -53,7 +54,7 @@
         </GroupBox>
 
         <GroupBox Grid.Row="1" Grid.Column="1" Header="Representação visual" Margin="8,8,0,0">
-            <Canvas x:Name="VisualArea" Background="White"/>
+            <Canvas x:Name="VisualArea" Background="White" SnapsToDevicePixels="True"/>
         </GroupBox>
     </Grid>
 </Window>
